--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 
-h1, h2 {
+h1, h2, h3 {
 	font-family: 'Coming Soon', cursive;
 	font-weight: 300;
 	margin:0 0 15px 0;
@@ -29,6 +29,9 @@ h2 {
 	font-size: 24px;
 }
 
+h3 {
+	font-size: 24px;
+}
 
 p {
 	margin: 0 0 15px 0;
